2007-06-16  Brian Pepple  <bpepple@fedoraproject.org>
	* data/gramps.desktop.in: Fix desktop file to conform to desktop
	file specs.

2007-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsChildOfFilterMatch.py
	(IsChildOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsAncestorOfFilterMatch.py
	(IsAncestorOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsDescendantOfFilterMatch.py
	(IsDescendantOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_HasCommonAncestorWithFilterMatch.py
	(HasCommonAncestorWithFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsParentOfFilterMatch.py
	(IsParentOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsSiblingOfFilterMatch.py
	(IsSiblingOfFilterMatch): Subclass MatchesFilter.
	* src/Filters/Rules/Person/_IsSpouseOfFilterMatch.py
	(IsSpouseOfFilterMatch): Subclass MatchesFilter.

2007-06-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_Backup.py: Optimization and documentation.

2007-06-14  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDbUtils/_Backup.py (__do_restore): Minor optimization.
	* src/GrampsDb/_GrampsDbBase.py (__get_from_handle): Pass txn.

2007-06-14  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_Backup.py (__do_restore): use transactions during restore

2007-06-14  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/SvgDrawDoc.py: improve text rendering (#0001072)

2007-06-13  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py: Enable recent files.
	* src/DisplayState.py (RecentDocsMenu.load): work out directories;
	(RecentDocsMenu.build): Use symbolic names for menu.
	* src/RecentFiles.py: Make work with directories and symbolic
	names; remove GNOME-related functionality.
	* src/GrampsDb/_GrampsDBDir.py (open_undodb): Override the base
	method by using undo.db inside the data directory.
