@@ -39,6 +39,7 @@ USE_LAST_VIEW        = ('preferences','use-last-view', 0)
 FAMILY_SIBLINGS      = ('preferences','family-siblings', 0)
 AUTOLOAD             = ('behavior','autoload', 0)
 ENABLE_AUTOBACKUP    = ('behavior','enable-autobackup', 0)
+DATABASE_PATH        = ('behavior','database-path', 2)
 SPELLCHECK           = ('behavior','spellcheck', 0)
 BETAWARN             = ('behavior','betawarn', 0)
 WELCOME              = ('behavior','welcome', 1)
